# jsx-builder

./: .gitignore  README.md  poetry.toml  pyproject.toml
src/jsx_builder/: __init__.py  builders.py  jsxfileimpl.py  tmp.html  translator.py
tests/: __init__.py  conftest.py  test_build.py
tests/_build/base/doctrees/: environment.pickle  index.doctree
tests/_build/base/jjson/: environment.pickle  genindex.fjson  globalcontext.json  index.fjson  index.html  objects.inv  search.fjson  searchindex.json
tests/_build/base/jjson/_sources/: index.rst.txt
tests/_build/tutorial/doctrees/: environment.pickle  headings.doctree  index.doctree  introduction.doctree  paragraphs.doctree  table_of_contents.doctree
tests/_build/tutorial/jjson/: .buildinfo  environment.pickle  genindex.fjson  globalcontext.json  headings.fjson  headings.html  index.fjson  index.html  introduction.fjson  introduction.html  objects.inv  paragraphs.fjson  paragraphs.html  search.fjson  searchindex.json  table_of_contents.fjson  table_of_contents.html
tests/_build/tutorial/jjson/_sources/: headings.rst.txt  index.rst.txt  introduction.rst.txt  paragraphs.rst.txt  table_of_contents.rst.txt
tests/_build/tutorial/jjson/_static/: documentation_options.js
tests/sites/base/: conf.py
tests/sites/tutorial/: conf.py  install.rst  introduction.rst
