[tool.poetry]
name = "jsx-builder"
version = "0.1.0"
description = "A sphinx builder to create html with injected JSX components."
authors = ["Martin Heubuch <martin.heubuch@spie-isw.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tastenmo/jsx-builder.git"
classifiers = [
  'Programming Language :: Python',
  'Framework :: Sphinx',
  'Framework :: Sphinx :: Theme',
  'Topic :: Documentation',
  'Topic :: Documentation :: Sphinx',
  'Topic :: Software Development :: Documentation'
]

packages = [
    {include = "jsx_builder", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
sphinx = "^7.2"


[tool.poetry.group.docs.dependencies]
sphinx-autobuild = "^2024.2.4"
python-dotenv = "^1.0.1"
sphinxcontrib-plantuml = "^0.29"
sphinx-needs = "^2.0.0"
sphinx-copybutton = "^0.5.2"
myst-parser = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-cov = ">=4,<6"
coverage = { extras = ["toml"], version = "^7.2" }
types-docutils = ">=0.19.1.6,<0.21.0.0"
mypy = "^1.0"
pytest-regressions = "^2.5.0"
defusedxml = "^0.7.1"
beautifulsoup4 = "^4.9.1"

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.6"
ruff = ">=0.0.269,<0.3.5"

[tool.poetry.group.netlify.dependencies]
nox = {version = ">=2023.4.22,<2025.0.0", python = "3.8"}
poetry = {version = "^1.4.2", python = "3.8"}
pipx = {version = "^1.2.0", python = "3.8"}
pip = {version = ">=23.1.2,<25.0.0", python = "3.8"}

[[tool.poetry.source]]
name = "jsx-builder"
url = "https://github.com/tastenmo/jsx-builder.git"
priority = "supplemental"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["jsx_builder"]

[tool.coverage.report]
show_missing = true

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "W", "I", "C90", "D", "UP", "YTT", "S", "ANN", "SIM", "N"]
ignore = ["ANN401", "D203", "D213", "SIM105", "E501", "ANN101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
files = ["src/jsx_builder/*.py", "tests/*.py", "noxfile.py", "docs/*.py"]
show_error_codes = true
show_error_context = true
pretty = true
strict = true
show_column_numbers = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["pygments.*", "dotenv", "sphinxcontrib.serializinghtml", "bs4"]
ignore_missing_imports = true

[tool.poetry.plugins."sphinx.builders"]
jjson = "jsx_builder.builders:JSONJSXBuilder"
jsx = "jsx_builder.builders:JSXBuilder"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
folders = [
    { path = "docs" },
    { path = "demo"}
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

